nginx/k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  host: nginx.apps-crc.testing
  to:
    kind: Service
    name: nginx
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
